base/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    tailscale.com/proxy-class: "tailscale-small"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 443
  tls:
  - hosts:
    - argocd
